--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdt2d": "^1.0.0",
     "clean-pslg": "^1.1.0",
     "concat-stream": "^1.5.2",
+    "earcut": "^2.1.1",
     "minimist": "^1.2.0",
     "shpjs": "^3.3.2",
     "simplicial-complex": "^1.0.0",
